--- a/report/report.bib
+++ b/report/report.bib
@@ -11,3 +11,14 @@
 	url ="https://en.wikipedia.org/wiki/Standard_RAID_levels#RAID_6",
 	note = "[Online; accessed 13-Nov-2015]"
 }
+
+@article{plank1997tutorial,
+	title={A tutorial on Reed-Solomon coding for fault-tolerance in RAID-like systems},
+	author={Plank, James S and others},
+	journal={Softw., Pract. Exper.},
+	volume={27},
+	number={9},
+	pages={995--1012},
+	year={1997},
+	publisher={Citeseer}
+}
