--- a/report/report.bib
+++ b/report/report.bib
@@ -12,13 +12,22 @@
 	note = "[Online; accessed 13-Nov-2015]"
 }
 
-@article{plank1997tutorial,
-	title={A tutorial on Reed-Solomon coding for fault-tolerance in RAID-like systems},
-	author={Plank, James S and others},
-	journal={Softw., Pract. Exper.},
-	volume={27},
-	number={9},
-	pages={995--1012},
-	year={1997},
-	publisher={Citeseer}
+@ARTICLE{p:97:rs,
+	author = "J. S. Plank",
+	title = "A Tutorial on {R}eed-{S}olomon Coding for
+	Fault-Tolerance in {RAID}-like Systems",
+	journal = "Software -- Practice \& Experience",
+	volume = "27",
+	number = "9",
+	pages = "995-1012",
+	month = "September",
+	year = "1997",
+	where = "http://web.eecs.utk.edu/~plank/plank/papers/CS-96-332.html"
+}
+
+@inproceedings{plank2013tutorial,
+	title={Tutorial: Erasure coding for storage applications},
+	author={Plank, JS and Huang, C},
+	booktitle={Slides presented at FAST-2013: 11th Usenix Conference on File and Storage Technologies},
+	year={2013}
 }
