--- a/report/report.tex
+++ b/report/report.tex
@@ -4,7 +4,7 @@
 \usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage{url}
-
+\usepackage{mathtools}
 \graphicspath{{./pics}}
 
 %==========================================================
