--- a/report/1_introduction.tex
+++ b/report/1_introduction.tex
@@ -12,7 +12,9 @@ In this project, we implemented a mini-actual distributed storage system in loca
 	
 	\item Ability to rebuild lost redundancy at a replacement storage node
 	
-	\item Generalized encoding algorithm in extension to the original 6+2 erasure coding
+	\item Capable of encoding and decoding files with arbitrary size
+	
+	\item Generalized encoding algorithm in extension to the original $(8,6)$ erasure coding to $(n,k)$, where $n$ and $k$ are integers having $n \times k \leq 2^8$. 
 \end{enumerate}
 
 
